demo/6_network/staticPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-pod
spec: 
 containers: 
  - image: nginx
    name: nginx
