demo/6_network/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-demo
 annotations:
  kubernetes.io/ingress.class: "nginx"
spec: 
 rules:
 - http:
    paths:
    - path: /cart
      pathType: Prefix
      backend:
       service:
        name: cart
        port:
         number: 5678
    - path: /account
      pathType: Prefix
      backend:
       service:
        name: account
        port:
         number: 5678
    - path: /payment
      pathType: Prefix
      backend:
       service:
        name: payment
        port:
         number: 5678
